syntax = "proto3";

package io.mystore.shipping.entity;

import "google/protobuf/timestamp.proto";

option java_outer_classname = "ShipOrderEntity";

message ShipOrderState {
  string order_id = 1;
  string customer_id = 2;
  google.protobuf.Timestamp ordered_utc = 3;
  google.protobuf.Timestamp shipped_utc = 4;
  repeated OrderItem order_items = 5;
  repeated ShipOrderItems ship_order_items = 6;
}

message ShipOrderCreated {
  string order_id = 1;
  string customer_id = 2;
  google.protobuf.Timestamp ordered_utc = 3;
  repeated OrderItem order_items = 4;
  repeated ShipOrderItems ship_order_items = 5;
}

message OrderShipped {
  string order_id = 1;
  google.protobuf.Timestamp shipped_utc = 2;
}

message OrderItemShipped {
  string order_id = 1;
  string order_item_id = 2;
  string sku_item_id = 3;
  google.protobuf.Timestamp shipped_utc = 4;
}

message OrderItem {
  string sku_id = 1;
  string sku_name = 2;
  int32 quantity = 3;
  google.protobuf.Timestamp shipped_utc = 4;
}

message ShipOrderItems {
  string sku_id = 1;
  string sku_name = 2;
  int32 quantity = 3;
  google.protobuf.Timestamp shipped_utc = 4;
  repeated ShipOrderItem ship_order_items = 5;
}

message ShipOrderItem {
  string order_item_id = 1;
  string sku_id = 2;
  string sku_item_id = 3;
  google.protobuf.Timestamp shipped_utc = 4;
}
